Update greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
 				<div class="container">
 					<div class="main-footer__bottom__inner">
 						<p class="main-footer__copyright">
-							&copy; Copyright <span class="dynamic-year"></span> by MBD.
+							&copy; Copyright <span class="dynamic-year"></span> by MPD.
 						</p>
 					</div><!-- /.main-footer__inner -->
 				</div><!-- /.container -->
@@ -1038,5 +1038,6 @@
 	<!-- template js -->
 	<script src="assets/js/travhub.js"></script>
 </body>
+
 
 </html>
