--- a/contact.html
+++ b/contact.html
@@ -361,7 +361,7 @@ content="Explore the beauty of Iraq with curated travel packages to Erbil, Baghd
 				<div class="container">
 					<div class="main-footer__bottom__inner">
 						<p class="main-footer__copyright">
-							&copy; Copyright <span class="dynamic-year"></span> by MBD.
+							&copy; Copyright <span class="dynamic-year"></span> by MPD.
 						</p>
 					</div><!-- /.main-footer__inner -->
 				</div><!-- /.container -->
@@ -465,5 +465,6 @@ content="Explore the beauty of Iraq with curated travel packages to Erbil, Baghd
 	<!-- template js -->
 	<script src="assets/js/travhub.js"></script>
 </body>
+
 
 </html>
