--- a/404.html
+++ b/404.html
@@ -299,7 +299,7 @@
 				<div class="container">
 					<div class="main-footer__bottom__inner">
 						<p class="main-footer__copyright">
-							&copy; Copyright <span class="dynamic-year"></span> by MBD.
+							&copy; Copyright <span class="dynamic-year"></span> by MPD.
 						</p>
 					</div><!-- /.main-footer__inner -->
 				</div><!-- /.container -->
@@ -403,5 +403,6 @@
 	<!-- template js -->
 	<script src="assets/js/travhub.js"></script>
 </body>
+
 
 </html>
