--- a/team.html
+++ b/team.html
@@ -381,7 +381,7 @@ content="Explore the beauty of Iraq with curated travel packages to Erbil, Baghd
 				<div class="container">
 					<div class="main-footer__bottom__inner">
 						<p class="main-footer__copyright">
-							&copy; Copyright <span class="dynamic-year"></span> by MPD.
+							&copy; <span class="dynamic-year"></span> All rights reserved — Created by MPD.
 						</p>
 					</div><!-- /.main-footer__inner -->
 				</div><!-- /.container -->
@@ -488,3 +488,4 @@ content="Explore the beauty of Iraq with curated travel packages to Erbil, Baghd
 
 
 </html>
+
