--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
 				<div class="container">
 					<div class="main-footer__bottom__inner">
 						<p class="main-footer__copyright">
-							&copy; Copyright <span class="dynamic-year"></span> by MPD.
+							&copy; <span class="dynamic-year"></span> All rights reserved — Created by MPD.
 						</p>
 					</div><!-- /.main-footer__inner -->
 				</div><!-- /.container -->
@@ -1041,3 +1041,4 @@
 
 
 </html>
+
