--- a/404.html
+++ b/404.html
@@ -299,7 +299,7 @@
 				<div class="container">
 					<div class="main-footer__bottom__inner">
 						<p class="main-footer__copyright">
-							&copy; Copyright <span class="dynamic-year"></span> by MPD.
+							&copy; <span class="dynamic-year"></span> All rights reserved — Created by MPD.
 						</p>
 					</div><!-- /.main-footer__inner -->
 				</div><!-- /.container -->
@@ -406,3 +406,4 @@
 
 
 </html>
+
