Update print statement from 'Hello' to 'Goodbye'

--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Our Guide</title>
+	<title>Our Team</title>
 	<!-- favicons Icons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -106,7 +106,7 @@ content="Explore the beauty of Iraq with curated travel packages to Erbil, Baghd
 			<div class="page-header__shape-one"></div><!-- /.page-header__shape-one -->
 			<div class="page-header__shape-two"></div><!-- /.page-header__shape-two -->
 			<div class="container">
-				<h2 class="page-header__title bw-split-in-right">Our Guide</h2>
+				<h2 class="page-header__title bw-split-in-right">Our Team</h2>
 				<ul class="travhub-breadcrumb list-unstyled">
 					<li><a href="index.html">Home</a></li>
 					<li>Guide</li>
@@ -488,4 +488,5 @@ content="Explore the beauty of Iraq with curated travel packages to Erbil, Baghd
 
 
 </html>
+
 
