--- a/team.html
+++ b/team.html
@@ -109,7 +109,7 @@ content="Explore the beauty of Iraq with curated travel packages to Erbil, Baghd
 				<h2 class="page-header__title bw-split-in-right">Our Team</h2>
 				<ul class="travhub-breadcrumb list-unstyled">
 					<li><a href="index.html">Home</a></li>
-					<li>Guide</li>
+					<li>Team</li>
 				</ul><!-- /.thm-breadcrumb list-unstyled -->
 			</div><!-- /.container -->
 		</section><!-- /.page-header -->
@@ -488,5 +488,6 @@ content="Explore the beauty of Iraq with curated travel packages to Erbil, Baghd
 
 
 </html>
+
 
 
